# src/backend/src/routes/schedules.ts
@@ -1,8 +1,10 @@
 import { Router } from 'express';
-import { getSchedulesHandler, getScheduleNowHandler } from '../controllers/scheduleController';
+import { getSchedulesHandler, getScheduleNowHandler, getLiveStateHandler } from '../controllers/scheduleController';
 
 const router = Router();
 
+router.get('/live', getLiveStateHandler);
+router.get('/schedules/live', getLiveStateHandler);
 router.get('/schedules/now', getScheduleNowHandler);
 router.get('/schedules', getSchedulesHandler);
 
